vcs/specs/parser/fail/statements/missing_provide_block.vr
// @test: parse-fail
// @level: L0
// @tags: parser, statements, provide, block, error
// @description: Test provide statement with context but missing equals and value
// @expected-error: E044

fn test() {
    provide Database
}
